# backend/src/main/scala/gardening/domain/journal/PlantJournalStore.scala
@@ -4,7 +4,6 @@ import gardening.domain.*
 
 trait PlantJournalStore:
   def getPlant(id: PlantId): GetPlantResult
-  def getPlants: GetPlantsResult
   def getOperations(plantId: PlantId, window: OperationWindow): GetOperationsResult
   def getOperation(id: OperationId): GetOperationResult
   def addOperation(operation: Operation): LogOperationResult
